--- a/bower.json
+++ b/bower.json
@@ -27,6 +27,10 @@
     "core-scaffold": "Polymer/core-scaffold#0.5",
     "core-menu": "Polymer/core-menu#0.5",
     "google-map": "GoogleWebComponents/google-map#master",
-    "core-icon": "Polymer/core-icon#0.5"
+    "core-icon": "Polymer/core-icon#0.5",
+    "core-iconset-svg": "Polymer/core-iconset-svg#0.5",
+    "paper-icon-button": "Polymer/paper-icon-button#0.5",
+    "paper-progress": "Polymer/paper-progress#0.5",
+    "core-header-panel": "Polymer/core-header-panel#0.5"
   }
 }
