--- a/bower.json
+++ b/bower.json
@@ -31,6 +31,7 @@
     "core-iconset-svg": "Polymer/core-iconset-svg#0.5",
     "paper-icon-button": "Polymer/paper-icon-button#0.5",
     "paper-progress": "Polymer/paper-progress#0.5",
-    "core-header-panel": "Polymer/core-header-panel#0.5"
+    "core-header-panel": "Polymer/core-header-panel#0.5",
+    "core-pages": "Polymer/core-pages#0.5"
   }
 }
