--- a/bower.json
+++ b/bower.json
@@ -32,6 +32,11 @@
     "paper-icon-button": "Polymer/paper-icon-button#0.5",
     "paper-progress": "Polymer/paper-progress#0.5",
     "core-header-panel": "Polymer/core-header-panel#0.5",
-    "core-pages": "Polymer/core-pages#0.5"
+    "core-pages": "Polymer/core-pages#0.5",
+    "page.js": "~1.6.3",
+    "more-routing": "Polymore/more-routing#~0.5.0",
+    "core-list": "Polymer/core-list#0.5",
+    "core-image": "Polymer/core-image#0.5",
+    "Faker": "~2.1.2"
   }
 }
